Fix swiper overflow visible

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  @apply text-[#161616] bg-dsfr-beige overflow-x-hidden backdrop-blur-sm;
+  @apply text-[#161616] bg-dsfr-beige overflow-x-hidden;
 }
 
 .markdown {
